adjust content section - create new section 'content' - change class name from 'main' to 'content'

--- a/style.css
+++ b/style.css
@@ -89,53 +89,60 @@ body {
 }
 
 .main {
-	display: flex;
-	padding-top: 6.5rem !important;
-	padding: 2.5rem 0;
-	column-gap: 2.5rem;
+	/* display: flex; */
+	padding-top: 9rem !important;
+	/* padding: 2.5rem 0; */
+	/* padding-bottom: 2.5rem; */
+	/* column-gap: 2.5rem; */
+	/* justify-content: space-between; */
 }
-.main__content-wrap {
+.content {
+	display: flex;
+	padding-bottom: 2.5rem;
+	justify-content: space-between;
+}
+.content__wrap {
 	display: flex;
 	row-gap: 2rem;
 	flex-direction: column;
 	justify-content: center;
 }
-.main__title {
+.content__title {
 	font-size: 4rem;
 	font-weight: 500;
 	line-height: 4.5rem;
 }
-.main__title span {
+.content__title span {
 	display: block;
 }
-.main__description {
+.content__description {
 	font-size: 1.125rem;
 	line-height: 2rem;
 	white-space: pre-line;
 }
-.main__button-wrap {
+.content__button-wrap {
 	display: flex;
 	align-items: center;
 	column-gap: 2rem;
 }
-.main__button-wrap a {
+.content__button-wrap a {
 	display: flex;
 	line-height: 1.5rem;
 	font-weight: 500;
 }
-.main__button-wrap a:nth-child(1) {
+.content__button-wrap a:nth-child(1) {
 	background-color: #f9ae25;
 	padding: 1rem 2rem;
 	border-radius: 40px;
 }
-.main__button-wrap a:nth-child(2) {
-    column-gap: 0.5rem;
-    align-items: center;
+.content__button-wrap a:nth-child(2) {
+	column-gap: 0.5rem;
+	align-items: center;
 }
-.main__button-wrap a:nth-child(2) img {
+.content__button-wrap a:nth-child(2) img {
 	display: inline-flex;
 }
-.main__image {
+.content__image {
 	border-radius: 120px;
 }
 
