create 'about' section

--- a/style.css
+++ b/style.css
@@ -146,6 +146,59 @@ body {
 	border-radius: 120px;
 }
 
+.about {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	row-gap: 2.5rem;
+	color: #49464A;
+	margin-top: 4rem;
+	padding-bottom: 4rem;
+}
+.about__text-wrap {
+	display: flex;
+	flex-direction: column;
+	row-gap: 1rem;
+}
+.about__title {
+	font-size: 3.5rem;
+	line-height: 4rem;
+	font-weight: 500;
+}
+.about__description {
+	font-size: 1.5rem;
+	font-weight: 400;
+	line-height: 2rem;
+}
+.about__card-wrap {
+	display: flex;
+	column-gap: 1.5rem;
+}
+.about__image {
+	max-width: 348px;
+}
+.about__image-description {
+	display: flex;
+	flex-direction: column;
+	padding: 1.5rem;
+	text-align: left;
+	row-gap: 1rem;
+}
+.about__image-description h2 {
+	font-size: 2rem;
+	line-height: 2.5rem;
+	font-weight: 700;
+}
+.about__image-description p {
+	font-size: 1rem;
+	line-height: 1.5rem;
+	font-weight: 400;
+}
+.about__button-wrap {
+	display: flex;
+	align-items: center;
+	column-gap: 0.5rem;
+}
 /* 
 *----------------- Responsive Goes Here */
 
