--- a/style.css
+++ b/style.css
@@ -229,6 +229,52 @@ body {
 	max-width: 13.5rem;
 }
 
+.footer {
+	display: flex;
+	flex-direction: column;
+	row-gap: 4rem;
+	padding: 3.5rem 0;
+	background: #F8EBFF;
+	color: #49464A;
+}
+.footer__wrap {
+	display: flex;
+	justify-content: space-between;
+}
+.footer__title {
+	font-size: 1.5rem;
+	font-weight: 700;
+	line-height: 2rem;
+}
+.footer__description-wrap {
+	max-width: 282px;
+	/* width: 100%; */
+	display: flex;
+	flex-direction: column;
+	row-gap: 1.5rem;
+}
+.footer__description {
+	font-size: 1rem;
+	line-height: 1.5rem;
+
+}
+.footer__wrap ul {
+	display: flex;
+	column-gap: 2.5rem;
+	list-style: none;
+}
+.footer__lists a{
+	font-size: 1.125rem;
+	line-height: 2rem;
+}
+.footer__copyright {
+	line-height: 1.5rem;
+}
+.footer__copyright p a {
+	color: #F9AE25;
+}
+
+
 /* 
 *----------------- Responsive Goes Here */
 
