--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
 /* 
 *---------------- Font */
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
-
 /* 
+*---------------- Root */
+html {
+	font-size: 15px;
+}
+/*
 *---------------- Reset CSS */
 *,
 *::before,
@@ -98,6 +102,7 @@ body {
 }
 .content {
 	display: flex;
+	column-gap: 2.5rem;
 	padding-bottom: 2.5rem;
 	justify-content: space-between;
 }
@@ -143,7 +148,9 @@ body {
 	display: inline-flex;
 }
 .content__image {
-	border-radius: 120px;
+	width: 100%;
+	max-width: 580px;
+	border-radius: 7.5rem;
 }
 
 .about {
@@ -175,7 +182,8 @@ body {
 	column-gap: 1.5rem;
 }
 .about__image {
-	max-width: 348px;
+	/* width: 100%; */
+	max-width: 21.75rem;
 }
 .about__image-description {
 	display: flex;
@@ -203,7 +211,7 @@ body {
 .download {
 	display: flex;
 	color: #49464A;
-	padding-top: 4rem;
+	padding: 4rem 0;
 	column-gap: 2.5rem;
 }
 .download__hero-image {
@@ -226,6 +234,7 @@ body {
 	align-items: flex-start;
 }
 .download__button-wrap a img{
+	width: 100%;
 	max-width: 13.5rem;
 }
 
@@ -272,29 +281,4 @@ body {
 }
 .footer__copyright p a {
 	color: #F9AE25;
-}
-
-
-/* 
-*----------------- Responsive Goes Here */
-
-@media screen and (min-width: 1201px) {
-	html {
-		font-size: 16px;
-	}
-}
-
-@media screen and (max-width: 1200px) {
-}
-
-@media screen and (max-width: 1024px) {
-}
-
-@media screen and (max-width: 768px) {
-}
-
-@media screen and (max-width: 480px) {
-	html {
-		font-size: 11px;
-	}
 }
