--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ body {
 }
 .nav__logo {
 	font-weight: 700;
+	cursor: pointer;
 }
 .nav__link-wrap {
 	display: flex;
@@ -102,6 +103,11 @@ body {
 	border: 1px solid black;
 	border-radius: 40px;
 	color: black;
+	transition: all 0.25s ease-in-out;
+}
+.nav__button:hover {
+	opacity: 0.6;
+	transform: scale(1.05);
 }
 
 .main {
@@ -166,7 +172,8 @@ body {
 }
 .content__image {
 	width: 100%;
-	max-width: 580px;
+	/* max-width: 580px; */
+	max-width: 36.25rem;
 	border-radius: 7.5rem;
 }
 
@@ -175,7 +182,7 @@ body {
 	flex-direction: column;
 	text-align: center;
 	row-gap: 2.5rem;
-	color: #49464A;
+	color: #49464a;
 	margin-top: 4rem;
 	padding-bottom: 4rem;
 }
@@ -196,11 +203,17 @@ body {
 }
 .about__card-wrap {
 	display: flex;
+	/* flex-grow: 0;
+	flex-shrink: 0; */
 	column-gap: 1.5rem;
+	/* justify-content: space-evenly; */
 }
 .about__image {
-	/* width: 100%; */
+	width: 100%;
 	max-width: 21.75rem;
+}
+.about__image-wrap {
+	width: 100%;
 }
 .about__image-description {
 	display: flex;
@@ -217,7 +230,6 @@ body {
 .about__image-description p {
 	font-size: 1rem;
 	line-height: 1.5rem;
-	font-weight: 400;
 }
 .about__button-wrap {
 	display: flex;
@@ -232,12 +244,14 @@ body {
 
 .download {
 	display: flex;
-	color: #49464A;
+	color: #49464a;
 	padding: 4rem 0;
 	column-gap: 2.5rem;
 }
 .download__hero-image {
-	border-radius: 120px;
+	width: 100%;
+	max-width: 30rem;
+	border-radius: 7.5rem;
 }
 .download__text-wrap {
 	display: flex;
@@ -250,12 +264,22 @@ body {
 	font-weight: 500;
 	line-height: 4rem;
 }
+.download__description {
+	white-space: pre-line;
+	line-height: 1.5rem;
+}
 .download__button-wrap {
 	display: flex;
 	column-gap: 2.5rem;
 	align-items: flex-start;
 }
-.download__button-wrap a img{
+.download__button-wrap a {
+	transition: transform 0.25s ease-in-out;
+}
+.download__button-wrap a:hover {
+	transform: scale(1.05);
+}
+.download__button-wrap a img {
 	width: 100%;
 	max-width: 13.5rem;
 }
@@ -265,8 +289,8 @@ body {
 	flex-direction: column;
 	row-gap: 4rem;
 	padding: 3.5rem 0;
-	background: #F8EBFF;
-	color: #49464A;
+	background: #f8ebff;
+	color: #49464a;
 }
 .footer__wrap {
 	display: flex;
@@ -276,9 +300,10 @@ body {
 	font-size: 1.5rem;
 	font-weight: 700;
 	line-height: 2rem;
+	cursor: pointer;
 }
 .footer__description-wrap {
-	max-width: 282px;
+	max-width: 17.625rem;
 	/* width: 100%; */
 	display: flex;
 	flex-direction: column;
@@ -287,14 +312,19 @@ body {
 .footer__description {
 	font-size: 1rem;
 	line-height: 1.5rem;
-
 }
 .footer__wrap ul {
 	display: flex;
 	column-gap: 2.5rem;
+	margin: 0;
 	list-style: none;
 }
-.footer__lists a{
+.footer__lists {
+	display: flex;
+	align-items: center;
+	height: fit-content;
+}
+.footer__lists a {
 	font-size: 1.125rem;
 	line-height: 2rem;
 }
