--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,3 @@
-
 /* 
 *----------------- Responsive Goes Here */
 
@@ -51,12 +50,6 @@
 		padding-right: 3.5rem !important;
 	}
 
-	.content {
-		flex-direction: column-reverse;
-		text-align: center;
-		align-items: center;
-		/* justify-content: center; */
-	}
 	.content__wrap {
 		row-gap: 1.5rem;
 		margin-top: 2rem;
@@ -70,7 +63,6 @@
 	}
 	.content__button-wrap {
 		column-gap: 1.5rem;
-		justify-content: center;
 	}
 	.content__button-wrap a:nth-child(1) {
 		padding: 1rem 2.5rem;
@@ -84,12 +76,20 @@
 
 	.about__card-wrap {
 		flex-direction: column;
+		row-gap: 1.5rem;
 	}
 	.about__image-wrap {
 		display: flex;
+		/* flex-direction: column; */
 		/* height: fit-content; */
 		align-items: center;
 		/* flex-direction: column; */
+	}
+	.about__image-description h2 {
+		font-size: 2.5rem;
+	}
+	.about__button-wrap {
+		width: fit-content;
 	}
 }
 
@@ -97,4 +97,87 @@
 	html {
 		font-size: 11px;
 	}
+
+	.nav__link-wrap ul{
+		flex-direction: column;
+		text-align: center;
+		row-gap: 1.5rem;
+		padding-left: 0;
+	}
+	.nav__button {
+		display: none;
+	}
+
+	.content {
+		flex-direction: column-reverse;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+	}
+	.content__title {
+		font-size: 3.5rem;
+	}
+
+	.content__button-wrap {
+		justify-content: center;
+	}
+
+	.about__image-wrap {
+		flex-direction: column;
+	}
+	.about__image {
+		max-width: unset;
+		width: 80%;
+	}
+	.about__image-description {
+		text-align: center;
+	}
+	.about__image-description p {
+		font-size: 1.2rem;
+		padding: 0 3rem;
+		line-height: 1.8rem;
+	}
+	.about__button-wrap {
+		width: 100%;
+		font-size: 1.2rem;
+		justify-content: center;
+	}
+
+	.download {
+		width: 100%;
+		flex-direction: column;
+		text-align: center;
+		align-items: center;
+		justify-content: center;
+		row-gap: 1.5rem;
+	}
+	.download__title {
+		font-size: 3.5rem;
+		line-height: 4.5rem;
+	}
+	.download__description {
+		font-size: 1.1rem;
+	}
+	.download__hero-image {
+		max-width: 28.25rem;
+	}
+	.download__text-wrap {
+		justify-content: center;
+		align-items: center;
+	}
+
+	.footer__wrap {
+		flex-direction: column;
+		row-gap: 1.5rem;
+	}
+	.footer__title {
+		font-size: 2rem;
+	}
+	.footer__wrap ul {
+		display: flex;
+		flex-direction: column;
+		row-gap: 1rem;
+		padding-left: 0;
+	}
 }
+ 
