adjust nav hover state

--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -53,7 +53,7 @@
 		-moz-transform: scale(0);
 		-ms-transform: scale(0);
 		-o-transform: scale(0);
-}
+	}
 	.nav__hamburger3--clicked:nth-child(3) {
 		transform: rotate(-45deg) translate(-2px, 0px);
 		-webkit-transform: rotate(-45deg) translate(-2px, 0px);
@@ -62,7 +62,7 @@
 		-o-transform: rotate(-45deg) translate(-2px, 0px);
 	}
 	.nav__link-wrap {
-        /* display: block; */
+		/* display: block; */
 		padding: 1rem 2rem;
 		width: 100%;
 		position: absolute;
@@ -94,7 +94,7 @@
 		-o-transition: all 1s;
 	}
 	.active {
-        /* display: block; */
+		/* display: block; */
 		transform: translateY(0);
 		opacity: 1;
 		-webkit-transform: translateY(0);
@@ -102,10 +102,23 @@
 		-ms-transform: translateY(0);
 		-o-transform: translateY(0);
 	}
+
+	.nav__link-wrap ul {
+		flex-direction: column;
+		text-align: center;
+		align-items: center;
+		justify-content: center;
+		row-gap: 1.5rem;
+		padding-left: 0;
+	}
 	.nav__link-wrap ul li {
 		margin-left: 0 !important;
+		width: fit-content;
 		font-size: 1.5rem;
 		letter-spacing: unset;
 		color: #000;
+	}
+	.nav__button {
+		display: none;
 	}
 }
