--- a/css/responsive.css
+++ b/css/responsive.css
@@ -156,9 +156,22 @@
 		align-items: center;
 	}
 
+	.footer {
+		text-align: center;
+	}
 	.footer__wrap {
 		flex-direction: column;
+		align-items: center;
 		row-gap: 1.5rem;
+	}
+	.footer__wrap ul {
+		align-items: center;
+	}
+	.footer__description-wrap {
+		max-width: unset;
+	}
+	.footer__description {
+		font-size: 1.2rem;
 	}
 	.footer__title {
 		font-size: 2rem;
@@ -169,5 +182,7 @@
 		row-gap: 1rem;
 		padding-left: 0;
 	}
+	.footer__lists a {
+		font-size: 1.2rem;
+	}
 }
- 
